--- a/miniprogram/pages/aboutPage/package/manageMember/manageMember.wxml
+++ b/miniprogram/pages/aboutPage/package/manageMember/manageMember.wxml
@@ -75,7 +75,7 @@
           <view class="cu-tag bg-{{item.identity=='SA'?'mauve':'yellow'}}">{{item.identity}}</view>
         </view>
         <view class="text-lg"wx:if="{{!!item.nickName}}">{{item.nickName}}</view>
-        <view class="text-lg" wx:else>({{item.name}})</view>
+        <view class="text-lg" wx:else>{{item.name}}</view>
       </view>
     </view>
   </view>
