--- a/miniprogram/pages/aboutPage/package1/discover/discover.wxml
+++ b/miniprogram/pages/aboutPage/package1/discover/discover.wxml
@@ -14,7 +14,7 @@
     <view class="action">导航栏错位</view>
   </view>
   <view class="padding-sm bg-white">
-    <image src="cloud://dist-3gfsowkhc324384b.6469-dist-3gfsowkhc324384b-1259081600/bug0.jpg" mode="widthFix" style="width:100%"></image>
+    <image src="cloud://dist-3gfsowkhc324384b.6469-dist-3gfsowkhc324384b-1259081600/bug0.jpg" mode="widthFix" style="width:100%; height: 100%"></image>
   </view>
   <view class="cu-bar bg-white">
     <view class="action">
