--- a/miniprogram/pages/homePage/home/home.wxml
+++ b/miniprogram/pages/homePage/home/home.wxml
@@ -2,7 +2,7 @@
   <image src="/colorui/images/bg0.png" class="" style="width:100%;height:486rpx"></image>
   <!-- <image src="cloud://demo-vr23l.6465-demo-vr23l-1259081600/image/bg0.png" class="" style="width:100%;height:486rpx"></image> -->
   <view class="nav-list">
-    <navigator open-type="navigate" hover-class="none" wx:for="{{elements}}" wx:key url="/pages/homePage/{{item.path}}/{{item.name}}" class="nav-li bg-{{item.color}}">
+    <navigator open-type="navigate" hover-class="none" wx:for="{{elements}}" wx:key url="/pages/homePage/{{item.path}}" class="nav-li bg-{{item.color}}">
       <view class="nav-title">{{item.title}}</view>
       <view class="nav-name">{{item.name}}</view>
       <text class="cuIcon-{{item.icon}}"></text>
