--- a/miniprogram/pages/aboutPage/package/manageIdentify/manageIdentify.wxml
+++ b/miniprogram/pages/aboutPage/package/manageIdentify/manageIdentify.wxml
@@ -48,3 +48,43 @@
     <text wx:else>{{password.password5}}</text>
   </view>
 </view>
+<view class="cu-bar bg-white solid-bottom">
+  <view class="action">
+    <text class="cuIcon-title text-green"></text>通知栏
+  </view>
+  <view class="action">
+    <button class="cu-btn line-olive margin-left" bindtap="showModal">修改</button>
+  </view>
+</view>
+
+    <view class="cu-bar" wx:if="{{notice!=''}}">
+      <text class="cuIcon-notificationfill text-orange margin-left text-xl"></text>
+      <swiper class="swiper_container margin-top-sm" vertical="true" autoplay="true" circular="true" interval="3000">
+          <swiper-item wx:for="{{msgList}}">
+            <view class="swiper_item text-orange">{{item}}</view>
+          </swiper-item>
+      </swiper>
+
+      <!-- <view class="content" style="top:{{StatusBar}}px">
+        <view name="content">test</view>
+      </view> -->
+    </view>
+<view class="cu-modal {{modalName=='notice'?'show':''}}">
+  <view class="cu-dialog">
+    <view class="cu-bar bg-white justify-end">
+      <view class="content">写评价</view>
+      <view class="action" bindtap="hideModal">
+        <text class="cuIcon-close text-red"></text>
+      </view>
+    </view>
+    <view class="padding-xl">
+      <input bindinput="inputNotice" placeholder="通知将展示在首页" disabled="{{modalName!='notice'}}" value="{{notice}}"></input>
+    </view>
+    <view class="cu-bar bg-white justify-end">
+      <view class="action">
+        <button class="cu-btn line-red text-red" bindtap="hideModal">取消</button>
+        <button class="cu-btn bg-green margin-left" bindtap="setNotice">提交</button>
+      </view>
+    </view>
+  </view>
+</view>
