--- a/miniprogram/pages/homePage/home/home.wxml
+++ b/miniprogram/pages/homePage/home/home.wxml
@@ -1,19 +1,19 @@
 
 <scroll-view scroll-y class="scrollPage">
-  <view class="cu-custom" style="height:{{CustomBar}};pxposition:fixed;">
-  <view class="cu-bar fixed" style="height:{{CustomBar}}px;padding-top:{{StatusBar}}px;">
-    <text class="cuIcon-notificationfill text-orange margin-left margin-right-sm text-lg"></text>
-    <swiper class="swiper_container margin-top" vertical="true" autoplay="true" circular="true" interval="3000">
-        <swiper-item wx:for="{{msgList}}">
-          <view class="swiper_item text-orange">{{item}}</view>
-        </swiper-item>
-  </swiper>
+  <view class="cu-custom" style="height:{{CustomBar}};pxposition:fixed;" wx:if="{{notice!=''}}">
+    <view class="cu-bar fixed" style="height:{{CustomBar}}px;padding-top:{{StatusBar}}px;">
+      <text class="cuIcon-notificationfill text-orange margin-left margin-right-sm text-xl"></text>
+      <swiper class="swiper_container margin-top-sm" vertical="true" autoplay="true" circular="true" interval="3000">
+          <swiper-item wx:for="{{msgList}}">
+            <view class="swiper_item text-orange">{{item}}</view>
+          </swiper-item>
+      </swiper>
 
-    <!-- <view class="content" style="top:{{StatusBar}}px">
-      <view name="content">test</view>
-    </view> -->
+      <!-- <view class="content" style="top:{{StatusBar}}px">
+        <view name="content">test</view>
+      </view> -->
+    </view>
   </view>
-</view>
 
   <image src="/colorui/images/bg0.png" class="" style="width:100%;height:486rpx"></image>
   <!-- <image src="cloud://dist-3gfsowkhc324384b.6469-dist-3gfsowkhc324384b-1259081600/bg/bg2.png" class="" style="width:100%;height:486rpx"></image> -->
