--- a/miniprogram/pages/aboutPage/package/manageIdentify/manageIdentify.wxml
+++ b/miniprogram/pages/aboutPage/package/manageIdentify/manageIdentify.wxml
@@ -6,7 +6,7 @@
     <view class="cu-load load-icon {{!isLoad?'loading':'over'}}"></view>
   </view>
 </cu-custom>
-<view class="cu-bar bg-white solid-bottom">
+<view class="cu-bar bg-white">
   <view class="action">
     <text class="cuIcon-title text-green"></text>二次认证
   </view>
@@ -15,7 +15,7 @@
     <text wx:else class="text-red">关闭</text>
   </view>
 </view>
-<view class="cu-bar bg-white margin-top">
+<view class="cu-bar bg-white margin-top-sm">
   <view class="action">
     <text class="cuIcon-title text-green"></text>认证密匙
   </view>
@@ -48,7 +48,7 @@
     <text wx:else>{{password.password5}}</text>
   </view>
 </view>
-<view class="cu-bar bg-white solid-bottom">
+<view class="cu-bar bg-white solid-bottom margin-top-sm">
   <view class="action">
     <text class="cuIcon-title text-green"></text>通知栏
   </view>
@@ -56,23 +56,20 @@
     <button class="cu-btn line-olive margin-left" bindtap="showModal">修改</button>
   </view>
 </view>
-
-    <view class="cu-bar" wx:if="{{notice!=''}}">
-      <text class="cuIcon-notificationfill text-orange margin-left text-xl"></text>
-      <swiper class="swiper_container margin-top-sm" vertical="true" autoplay="true" circular="true" interval="3000">
+    <view class="cu-bar text-lg" wx:if="{{notice!=''}}">
+      <view class="flex">
+      <text class="cuIcon-notificationfill text-orange margin-left margin-top"></text>
+      <swiper class="swiper_container margin-top-sm margin-left" vertical="true" autoplay="true" circular="true" interval="3000">
           <swiper-item wx:for="{{msgList}}">
             <view class="swiper_item text-orange">{{item}}</view>
           </swiper-item>
       </swiper>
-
-      <!-- <view class="content" style="top:{{StatusBar}}px">
-        <view name="content">test</view>
-      </view> -->
+    </view>
     </view>
 <view class="cu-modal {{modalName=='notice'?'show':''}}">
   <view class="cu-dialog">
     <view class="cu-bar bg-white justify-end">
-      <view class="content">写评价</view>
+      <view class="content">通知栏</view>
       <view class="action" bindtap="hideModal">
         <text class="cuIcon-close text-red"></text>
       </view>
