--- a/miniprogram/pages/homePage/home/home.wxml
+++ b/miniprogram/pages/homePage/home/home.wxml
@@ -1,10 +1,10 @@
 
 <scroll-view scroll-y class="scrollPage">
   <view class="cu-custom" style="height:{{CustomBar}};pxposition:fixed;" wx:if="{{notice!=''}}">
-    <view class="cu-bar fixed" style="height:{{CustomBar}}px;padding-top:{{StatusBar}}px;">
-      <text class="cuIcon-notificationfill text-orange margin-left margin-right-sm text-xl"></text>
-      <swiper class="swiper_container margin-top-sm" vertical="true" autoplay="true" circular="true" interval="3000">
-          <swiper-item wx:for="{{msgList}}">
+    <view class="cu-bar fixed text-lg" style="height:{{CustomBar}}px;padding-top:{{StatusBar}}px;">
+      <text class="cuIcon-notificationfill text-orange margin-left margin-right-sm"></text>
+      <swiper class="swiper_container margin-top-xs" vertical="true" autoplay="true" circular="true" interval="3000">
+          <swiper-item wx:for="{{msgList}}" wx:key="index">
             <view class="swiper_item text-orange">{{item}}</view>
           </swiper-item>
       </swiper>
@@ -18,7 +18,7 @@
   <image src="/colorui/images/bg0.png" class="" style="width:100%;height:486rpx"></image>
   <!-- <image src="cloud://dist-3gfsowkhc324384b.6469-dist-3gfsowkhc324384b-1259081600/bg/bg2.png" class="" style="width:100%;height:486rpx"></image> -->
   <view class="nav-list">
-    <navigator open-type="navigate" hover-class="none" wx:for="{{elements}}" wx:key url="/pages/homePage/{{item.path}}" class="nav-li bg-{{item.color}}">
+    <navigator open-type="navigate" hover-class="none" wx:for="{{elements}}" wx:key="index" url="/pages/homePage/{{item.path}}" class="nav-li bg-{{item.color}}">
       <view class="nav-title">{{item.title}}</view>
       <view class="nav-name">{{item.name}}</view>
       <text class="cuIcon-{{item.icon}}"></text>
