--- a/miniprogram/pages/aboutPage/package/manageIdentify/manageIdentify.wxml
+++ b/miniprogram/pages/aboutPage/package/manageIdentify/manageIdentify.wxml
@@ -56,10 +56,10 @@
     <button class="cu-btn line-olive margin-left" bindtap="showModal">修改</button>
   </view>
 </view>
-    <view class="cu-bar text-lg" wx:if="{{notice!=''}}">
+    <view class="cu-bar text-xl" wx:if="{{notice!=''}}">
       <view class="flex">
       <text class="cuIcon-notificationfill text-orange margin-left margin-top"></text>
-      <swiper class="swiper_container margin-top-sm margin-left" vertical="true" autoplay="true" circular="true" interval="3000">
+      <swiper class="swiper_container margin-top margin-left" vertical="true" autoplay="true" circular="true" interval="3000">
           <swiper-item wx:for="{{msgList}}">
             <view class="swiper_item text-orange">{{item}}</view>
           </swiper-item>
