--- a/miniprogram/pages/homePage/home/home.wxml
+++ b/miniprogram/pages/homePage/home/home.wxml
@@ -1,9 +1,9 @@
 
 <scroll-view scroll-y class="scrollPage">
   <view class="cu-custom" style="height:{{CustomBar}};pxposition:fixed;" wx:if="{{notice!=''}}">
-    <view class="cu-bar fixed text-lg" style="height:{{CustomBar}}px;padding-top:{{StatusBar}}px;">
+    <view class="cu-bar fixed text-xl" style="height:{{CustomBar}}px;padding-top:{{StatusBar}}px;">
       <text class="cuIcon-notificationfill text-orange margin-left margin-right-sm"></text>
-      <swiper class="swiper_container margin-top-xs" vertical="true" autoplay="true" circular="true" interval="3000">
+      <swiper class="swiper_container margin-top-sm" vertical="true" autoplay="true" circular="true" interval="3000">
           <swiper-item wx:for="{{msgList}}" wx:key="index">
             <view class="swiper_item text-orange">{{item}}</view>
           </swiper-item>
