--- a/miniprogram/pages/aboutPage/package1/discover/discover.wxss
+++ b/miniprogram/pages/aboutPage/package1/discover/discover.wxss
@@ -1,22 +1,18 @@
 
 .ripple-main {
 	height: 100%;
-	background: url('https://6469-dist-3gfsowkhc324384b-1259081600.tcb.qcloud.la/bg/bg1.jpg?sign=e51381242d3155971cc6ff3a387ccb83&t=1604903098') no-repeat;
+	background: url('https://6469-dist-3gfsowkhc324384b-1259081600.tcb.qcloud.la/bg/bg1.jpg') no-repeat;
 	background-size: cover;
 }
 
 .v-content {
-	display: flex;
 	height: 100%;
 	overflow: hidden;
 	text-align: center;
-	position: relative;
-	justify-content: center;
 }
 
 .tx {
 	color: white;
-	background: rgba(96,125,139,0.5);
 	width: 100%;
 }
 
@@ -26,6 +22,7 @@
 	position: absolute;
 	z-index: 1000;
 	bottom:0;
+	justify-content:center;
 }
 
 .bar {
@@ -63,7 +60,7 @@
 .add view {
 	display: flex;
 	align-items: center;
-	font-size: 35rpx;
+	font-size: 50rpx;
 	color: #fff;
 	z-index: 1005;
 	height: 90rpx;
@@ -134,7 +131,10 @@
 .menu {
 	padding: 20rpx;
 	color: #607d8b;
-	font-size: 30rpx;
+	display: flex;
+	justify-content: center;
+	margin-top: 150rpx;
+	font-size: 35rpx;
 	font-weight: 600;
 	text-shadow: 5rpx 5rpx 25rpx #607d8b;
 }
@@ -170,7 +170,10 @@
 	height: 110rpx;
 	margin-bottom: 15rpx;
 	/* box-shadow: 0rpx 0rpx 25rpx #607d8b; */
-	border-radius: 100%;
+	font-size: 40rpx;
+}
+.item .text {
+	font-size: 60rpx;
 }
 
 .item .string {
