--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -128,7 +128,7 @@
         </button>
         <view class="action">
           <view class="content">
-            <text class="text-grey text-sm">_(:з」∠)_酷爱</text>
+            <text class="text-grey text-sm">_(:з」∠)_酷爱来</text>
           </view>
         </view>
       </view>
