--- a/miniprogram/pages/aboutPage/detailSheet/detailSheet.wxml
+++ b/miniprogram/pages/aboutPage/detailSheet/detailSheet.wxml
@@ -49,7 +49,6 @@
     </view>
   </view>
 </view>
-
 <view class="cu-timeline" wx:if="{{!!summary}}">
   <view class="cu-time" wx:if="{{!feedback && summary.date!==complete.date}}">{{summary.date}}</view>
   <view class="cu-time" wx:if="{{!!feedback && summary.date!==feedback.date}}">{{summary.date}}</view>
@@ -59,7 +58,6 @@
     </view>
   </view>
 </view>
-  
   <view class="cu-bar bg-white solid-bottom">
     <view class="action">
       <text class="cuIcon-title text-pink"></text>联系信息
@@ -79,20 +77,17 @@
     <text>{{sheet.userWechat}}</text>
   </view>
   <view class="cu-form-group">
-    <view class="text-black">宿舍</view>
-    <text>{{sheet.userAddress}}</text>
+    <view class="">宿舍</view>
+    <text class="text-black">{{sheet.userAddress}}</text>
   </view>
 
   <view class="cu-bar bg-white solid-top">
     <view class="action">
       <text class="cuIcon-title text-pink"></text>
-      <text class="text-black">报修类型</text>
+      <text>报修类型</text>
     </view>
-    <view class="action">{{sheet.computerType}}</view>
-  </view>
-
-<!-- userName, userPhone, userAddress, userWechat, computerType, repairType, faultType, faultDetail, repairman, repairmanId -->
-  
+    <view class="action text-black">{{sheet.computerType}}</view>
+  </view>  
   <view class="cu-bar bg-white solid-top">
     <view class="action">
       <text class="cuIcon-title text-pink"></text>
@@ -121,11 +116,10 @@
 
   <view class="cu-bar bg-white solid-top">
     <view class="action">
-      <text class="cuIcon-title text-pink"></text>维修人员信息
+      <text class="cuIcon-title text-pink"></text>
+      <text class="text-black">维修人员信息</text>
       <text class="text-grey text-sm">（点击复制）</text>
     </view>
-    <!-- <view class="action">{{sheet.wechat}}</view> -->
-    <!-- <view class="action" wx:else>{{sheet.repairman}}</view> -->
   </view>
   <view class="cu-form-group" bindtap="copyData" data-data="{{sheet.repairman}}">
     <view class=" text-black">姓名</view>
