--- a/miniprogram/pages/aboutPage/package1/discover/discover.wxss
+++ b/miniprogram/pages/aboutPage/package1/discover/discover.wxss
@@ -214,3 +214,110 @@
 		transform: translateY(0%)
 	}
 }
+
+.components-ancube {
+  margin: 0;
+  width: 100%;
+  /* height: 100vh; */
+  color: #fff;
+  /* background: linear-gradient(45deg, #00F5D4, #01BEFF); */
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateX(0deg) rotateY(0deg);
+  }
+
+  100% {
+    transform: rotateX(360deg) rotateY(360deg);
+  }
+}
+
+.box {
+  margin: 250rpx;
+  perspective: 1000px;
+}
+
+.cube {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  transform: rotateX(-41deg) rotateY(-63deg);
+  transform-style: preserve-3d;
+  animation: rotate 20s infinite linear;
+}
+
+.cube>view {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 200px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #FFFFFF;
+  background: rgba(0, 245, 212, .6);
+  border: 1px solid #FFFFFF;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: transform 5s ease-in;
+}
+
+.front {
+  transform: translateZ(100px)
+}
+
+.back {
+  transform: translateZ(-100px) rotateY(-180deg)
+}
+
+.left {
+  transform: translateX(-100px) rotateY(-90deg)
+}
+
+.right {
+  transform: translateX(100px) rotateY(90deg)
+}
+
+.top {
+  transform: translateY(-100px) rotateX(90deg)
+}
+
+.bottom2 {
+  transform: translateY(100px) rotateX(-90deg);
+}
+
+.cube>span {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  background-color: #666666;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+}
+
+.in-front {
+  transform: translateZ(50px);
+}
+
+.in-back {
+  transform: translateZ(-50px) rotateY(180deg);
+}
+
+.in-left {
+  transform: translateX(50px) rotateY(90deg);
+}
+
+.in-right {
+  transform: translateX(-50px) rotateY(-90deg);
+}
+
+.in-top {
+  transform: translateY(50px) rotateX(90deg);
+}
+
+.in-bottom {
+  transform: translateY(-50px) rotateX(-90deg);
+}
